# backscatter

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  mkdocs.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: docs.yml
data/: .gitkeep
docs/: ROADMAP.md  configure.md  help.md  index.md  using.md
docs/assets/: extra.css
docs/decisions/: 0001-data-ingestion.md  0002-backend-rendering.md  0003-storage-model.md  0004-frontend-stack.md  0005-radar-site-selection.md  0006-configuration.md  0007-rendering-geometry.md  0008-mutable-locations-sqlite.md  0009-retention-pruning.md  0010-web-triggered-backfill-job.md  0011-live-chunks-frame.md  0012-intra-volume-sails-cuts.md  0013-runtime-retention.md
docs/dev/: architecture.md  contributing.md  decisions.md  index.md  local.md  testing.md
docs/get-started/: index.md  linux.md  macos.md  windows.md
scripts/: capture_docs.py
src/backscatter/: __init__.py  cli.py  config.py
src/backscatter/api/: __init__.py  app.py  frames.py
src/backscatter/backfill/: __init__.py  backfill.py
src/backscatter/collect/: __init__.py  collect.py
src/backscatter/decode/: __init__.py  volume.py
src/backscatter/ingest/: __init__.py  chunks.py  naming.py  pull.py  s3.py
src/backscatter/jobs/: __init__.py  manager.py
tests/: conftest.py  test_api.py  test_associate.py  test_backfill.py  test_chunks.py  test_collect.py  test_colormap.py  test_config.py  test_geometry.py  test_ingest.py  test_jobs.py  test_live_chunks.py  test_locations.py  test_naming.py  test_prune.py  test_raster.py  test_render.py  test_s3.py  test_settings.py  test_sites.py  test_store.py  test_surveillance.py  test_track.py
tests/fixtures/: chunks_KEMX.npz  sails_KFTG_layout.npz
web/: app.js  backfill.js  backfill.test.js  firstrun.js  firstrun.test.js  gaps.js  gaps.test.js  index.html  layout.js  layout.test.js  markers.js  markers.test.js  prefs.js  prefs.test.js  recolor.js  recolor.test.js  retention.js  retention.test.js  stormtracks.js  stormtracks.test.js  style.css  theme.js  theme.test.js  timefmt.js  timefmt.test.js  viewport.js  viewport.test.js
(+19 files in other folders)
